Wrap-up NEWS and META for 0.3.1 tag.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,7 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.3.1 (not tagged yet)
+* Changes in SLURM 0.3.2 (not yet tagged)
+========================
+
+* Changes in SLURM 0.3.1
 ========================
  -- Set SLURM_TASKS_PER_NODE env var for batch jobs (and LAM/MPI).
  -- Fix for slurmd spinning when stdin buffers full (gnats:434)
