Add support for srun to immediately begin execution of job once resources are allocated. Replace polling to test for allocation with processing of allocation response RPC from slurmctld at allocation time.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.2 (not yet tagged)
 ========================
+ -- Srun wakes immeditely upon resource allocation (via new RPC) 
+    rather than polling.
 
 * Changes in SLURM 0.3.1
 ========================
