--- a/trunk/doc/man/man3/slurm_hostlist_create.3
+++ b/trunk/doc/man/man3/slurm_hostlist_create.3
@@ -1,24 +1,24 @@
-.TH "Slurm API" "3" "January 2003" "Morris Jette" "Slurm host list support functions"
+.TH "Slurm API" "3" "May 2004" "Morris Jette" "Slurm host list support functions"
 .SH "NAME"
-hostlist_create \- Slurm host list support functions
+slurm_hostlist_create \- Slurm host list support functions
 .SH "SYNTAX"
 .LP 
 #include <hostlist.h>
 .LP 
 .LP
-hostlist_t \fBhostlist_create\fR (
+hostlist_t \fBslurm_hostlist_create\fR (
 .br
 	char *\fInode_list\fP
 .br
 );
 .LP
-char * \fBhostlist_shift\fR (
+char * \fBslurm_hostlist_shift\fR (
 .br
 	hostlist_t \fIhost_list\fP
 .br
 );
 .LP
-void \fBhostlist_destroy\fR (
+void \fBslurm_hostlist_destroy\fR (
 .br
 	hostlist_t \fIhost_list\fP
 .br
@@ -34,27 +34,27 @@ regular expression to describe numeric ranges of values and/or multiple numeric
 values (e.g. "linux[1-3,6]" represents "linux1", "linux2", "linux3", and "linux6").
 .TP
 \fIhost_list\fP
-A hostlist created by the \fBhostlist_create\fR function. 
+A hostlist created by the \fBslurm_hostlist_create\fR function. 
 
 .SH "DESCRIPTION"
 .LP
-\fBhostlist_create\fR creates a database of node names from a regular expression 
-describing node names. Use \fBhostlist_destroy\fR to release storage associated 
+\fBslurm_hostlist_create\fR creates a database of node names from a regular expression 
+describing node names. Use \fBslurm_hostlist_destroy\fR to release storage associated 
 with the database when no longer required.
 .LP
-\fBhostlist_shift\fR extracts the first entry from the host list database created 
-by the \fBhostlist_create\fR function.
+\fBslurm_hostlist_shift\fR extracts the first entry from the host list database created 
+by the \fBslurm_hostlist_create\fR function.
 .LP
-\fBhostlist_destroy\fR releases storage associated with a database created by 
-\fBhostlist_create\fR when no longer required.
+\fBslurm_hostlist_destroy\fR releases storage associated with a database created by 
+\fBslurm_hostlist_create\fR when no longer required.
 
 .SH "RETURN VALUE"
 .LP
-\fBhostlist_create\fR returns the host list database or NULL if memory can not be 
+\fBslurm_hostlist_create\fR returns the host list database or NULL if memory can not be 
 allocated for the database.
 
 .LP
-\fBhostlist_shift\fR returns a character string or NULL if no entries remain in 
+\fBslurm_hostlist_shift\fR returns a character string or NULL if no entries remain in 
 the database.
 
 .SH "EXAMPLE"
@@ -77,7 +77,7 @@ int main (int argc, char *argv[])
 .br
 	/*    slurm job step creation function */
 .LP
-	my_hostlist = hostlist_create (hostnames);
+	my_hostlist = slurm_hostlist_create (hostnames);
 .br
 	if (my_hostlist == NULL) {
 .br
@@ -87,11 +87,11 @@ int main (int argc, char *argv[])
 .br
 	}
 .LP
-	while ( (host = hostlist_shift(my_hostlist)) )
+	while ( (host = slurm_hostlist_shift(my_hostlist)) )
 .br
 		printf ("host = %s\\n", host); 
 .LP
-	hostlist_destroy (my_hostlist) ;
+	slurm_hostlist_destroy (my_hostlist) ;
 .br
 	exit (0);
 .br 
