--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,12 +3,12 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.2 (not yet tagged)
 ========================
- -- Srun wakes immeditely upon resource allocation (via new RPC) 
+ -- The srun command wakes immeditely upon resource allocation (via new RPC)
     rather than polling.
- -- Deamons log current version number at startup
+ -- SLURM daemons log current version number at startup.
  -- If slurmd can't respond to ping (e.g. paging is keeping it from 
     responding in a timely fashion) then send a registration RPC
-    to slurmctld
+    to slurmctld.
  -- Add "slurm_" prefix to slurm's hostlist_ function man pages.
  -- More AIX support added.
 
