--- a/trunk/doc/man/man3/slurm_free_node_info.3
+++ b/trunk/doc/man/man3/slurm_free_node_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "April 2004" "Morris Jette" "Slurm node informational calls"
+.TH "Slurm API" "3" "June 2004" "Morris Jette" "Slurm node informational calls"
 .SH "NAME"
 slurm_free_node_info, slurm_load_node, 
 slurm_print_node_info_msg, slurm_print_node_table
@@ -21,7 +21,7 @@ int \fBslurm_load_node\fR (
 .br 
 	node_info_msg_t **\fInode_info_msg_pptr\fP,
 .br
-	uint16_t \fIshow_all\fP
+	uint16_t \fIshow_flags\fP
 .br 
 );
 .LP 
@@ -31,7 +31,7 @@ void \fBslurm_print_node_info_msg\fR (
 .br
 	node_info_msg_t *\fInode_info_msg_ptr\fP,
 .br
-	int \fIone_linerfP
+	int \fIone_liner\fP
 .br 
 );
 .LP 
@@ -41,7 +41,7 @@ void \fBslurm_print_node_table\fR (
 .br
 	node_info_t *\fInode_ptr\fP,
 .br
-	int \fIone_linerfP
+	int \fIone_liner\fP
 .br 
 );
 .SH "ARGUMENTS"
@@ -70,11 +70,14 @@ Print one record per line if non-zero.
 \fIout_file\fP
 Specifies the file to print data to.
 .TP 
-\fIshow_all\fP
-Report information about all nodes if non-zero.
+\fIshow_flags\fP
+Job filtering flags, may be ORed.
 Information about nodes in partitions that are configured as 
 hidden and partitions that the user's group is unable to utilize 
 are not reported by default.
+The \fBSHOW_ALL\fP flag will cause information about nodes in all
+partitions to be displayed.
+
 .TP 
 \fIupdate_time\fP
 For all of the following informational calls, if update_time is equal to 
@@ -134,7 +137,7 @@ int main (int argc, char *argv[])
 .br
 	if ( slurm_load_node ((time_t) NULL, 
 .br
-	                      &node_buffer_ptr, 1) ) {
+	                      &node_buffer_ptr, SHOW_ALL) ) {
 .br
 		slurm_perror ("slurm_load_node error");
 .br
@@ -228,8 +231,8 @@ int main (int argc, char *argv[])
 
 .SH "NOTE"
 Some data structures contain index values to cross-reference each other. 
-If the \fIshow_all\fP argument is not set when getting this data, these index 
-values will be invalid.
+If the \fIshow_flags\fP argument is not set to SHOW_ALL when getting this
+data, these index values will be invalid.
 
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
