--- a/trunk/doc/man/man3/slurm_free_job_step_info_response_msg.3
+++ b/trunk/doc/man/man3/slurm_free_job_step_info_response_msg.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "April 2004" "Morris Jette" "Slurm job step information functions"
+.TH "Slurm API" "3" "June 2004" "Morris Jette" "Slurm job step information functions"
 .SH "NAME"
 \fBslurm_free_job_step_info_response_msg, slurm_get_job_steps,
 slurm_print_job_step_info, slurm_print_job_step_info_msg
@@ -25,7 +25,7 @@ void \fBslurm_get_job_steps\fR (
 .br
 	job_step_info_response_msg_t **\fIjob_step_info_msg_pptr\fP,
 .br
-	uint16_t \fIshow_all\fP
+	uint16_t \fIshow_flags\fP
 .br 
 );
 .LP 
@@ -35,7 +35,7 @@ void \fBslurm_print_job_step_info\fR (
 .br
 	job_step_info_t *\fIjob_step_ptr\fP,
 .br
-	int \fIone_linerfP
+	int \fIone_liner\fP
 .br 
 );
 .LP 
@@ -45,7 +45,7 @@ void \fBslurm_print_job_step_info_msg\fR (
 .br
 	job_step_info_response_msg_t *\fIjob_step_info_msg_ptr\fP,
 .br
-	int \fIone_linerfP
+	int \fIone_liner\fP
 .br 
 );
 .SH "ARGUMENTS"
@@ -75,11 +75,14 @@ Print one record per line if non-zero.
 \fIout_file\fP
 Specifies the file to print data to.
 .TP 
-\fIshow_all\fP
-Report information about job steps in all partitions if non-zero.
+\fIshow_flags\fP
+Job filtering flags, may be ORed.
 Information about job steps in partitions that are configured as 
 hidden and partitions that the user's group is unable to utilize 
 are not reported by default.
+The \fBSHOW_ALL\fP flag will cause information about job steps in all
+partitions to be displayed.
+
 .TP
 \fIstep_id\fP
 Specifies a slurm job step ID. A value of zero implies all job steps.
@@ -136,7 +139,7 @@ int main (int argc, char *argv[])
 .br
 	if ( slurm_get_job_steps ((time_t) NULL, 0, 0,
 .br
-	                          &step_info_ptr, 1) ) {
+	                          &step_info_ptr, SHOW_ALL) ) {
 .br
 		slurm_perror ("slurm_get_job_steps error");
 .br
@@ -186,8 +189,8 @@ int main (int argc, char *argv[])
 
 .SH "NOTE"
 Some data structures contain index values to cross-reference each other. 
-If the \fIshow_all\fP argument is not set when getting this data, these index 
-values will be invalid.
+If the \fIshow_flags\fP argument is not set to SHOW_ALL when getting this
+data, these index values will be invalid.
 
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
