--- a/trunk/doc/man/man3/slurm_free_partition_info.3
+++ b/trunk/doc/man/man3/slurm_free_partition_info.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "April 2004" "Morris Jette" "Slurm partition information reporting functions"
+.TH "Slurm API" "3" "June 2004" "Morris Jette" "Slurm partition information reporting functions"
 .SH "NAME"
 slurm_free_partition_info, slurm_load_partitions, 
 slurm_print_partition_info, slurm_print_partition_info_msg
@@ -21,7 +21,7 @@ int \fBslurm_load_partitions\fR (
 .br 
 	partition_info_msg_t **\fIpartition_info_msg_pptr\fP,
 .br
-	uint16_t \fIshow_all\fP
+	uint16_t \fIshow_flags\fP
 .br 
  );
 .LP 
@@ -31,7 +31,7 @@ void \fBslurm_print_partition_info\fR (
 .br
 	partition_info_t *\fIpartition_ptr\fP,
 .br
-	int \fIone_linerfP
+	int \fIone_liner\fP
 .br 
 );
 .LP 
@@ -41,7 +41,7 @@ void \fBslurm_print_partition_info_msg\fR (
 .br
 	partition_info_msg_t *\fIpartition_info_msg_ptr\fP,
 .br
-	int \fIone_linerfP
+	int \fIone_liner\fP
 .br 
 );
 .SH "ARGUMENTS"
@@ -66,11 +66,13 @@ structure's contents.
 \fIpartition_info_msg_ptr\fP
 Specifies the pointer to the structure created by \fBslurm_load_partitions\fP. 
 .TP 
-\fIshow_all\fP
-Report information about all partitions if non-zero.
+\fIshow_flags\fP
+Job filtering flags, may be ORed.
 Information about partitions that are configured as 
 hidden and partitions that the user's group is unable to utilize 
 are not reported by default.
+The \fBSHOW_ALL\fP flag will cause information about partitions 
+to be displayed.
 .TP
 \fIupdate_time\fP
 For all of the following informational calls, if update_time is equal to or greater 
@@ -124,7 +126,7 @@ int main (int argc, char *argv[])
 .br
 	if (slurm_load_partitions((time_t)NULL,
 .br
-	                          &part_buffer_ptr, 1)) {
+	                          &part_buffer_ptr, SHOW_ALL)) {
 .br
 		slurm_perror ("slurm_load_partitions error");
 .br
@@ -174,8 +176,8 @@ int main (int argc, char *argv[])
 
 .SH "NOTE"
 Some data structures contain index values to cross-reference each other. 
-If the \fIshow_all\fP argument is not set when getting this data, these index 
-values will be invalid.
+If the \fIshow_flags\fP argument is not set to SHOW_ALL when getting this
+data, these index values will be invalid.
 
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
