o add info for SLURM_CORE_FORMAT

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -560,6 +560,9 @@ variables, along with their corresponding options, are listed below.
 SLURM_CPUS_PER_TASK
 \fB\-c, \-\-ncpus\-per\-task\fR=\fIn\fR
 .TP
+SLURM_CORE_FORMAT
+\fB\-\-core\fR=\fIformat\fR
+.TP
 SLURM_DEBUG
 \fB\-v, \-\-verbose\fR
 .TP
