--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.3 (not tagged yet)
 ========================
+ -- Fix slurmctld handling of heterogeneous processor count on elan 
+    switch (was setting DRAINED nodes in state DRAINING).
 
 * Changes in SLURM 0.3.2
 ========================
