o Fix parsing of node states for sinfo -t, --states and store state ids    in an int instead of a short (truncation was causing strange results,    especially when ORed with NODE_NO_RESPOND flag).  o No longer bother processing the '*' at end of node state strings.    sinfo -t now shows both responding and non-responding nodes by    default --responding or --dead can be used to choose one or the other.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,6 +5,7 @@ documents those changes that are of interest to users and admins.
 ========================
  -- Fix slurmctld handling of heterogeneous processor count on elan 
     switch (was setting DRAINED nodes in state DRAINING).
+ -- Fix sinfo -R, --list-reasons to list all relevant node states.
 
 * Changes in SLURM 0.3.2
 ========================
