--- a/trunk/doc/man/man1/sinfo.1
+++ b/trunk/doc/man/man1/sinfo.1
@@ -201,12 +201,10 @@ List nodes only having the given state(s).  Multiple states
 may be comma separated and the comparison is case insensitive.
 Possible values include (case insensitive): ALLOC, ALLOCATED,
 COMP, COMPLETING, DOWN, DRAIN, DRAINED, DRAINING, IDLE, UNK,
-and UNKNOWN.  A "*" suffix may be appended to any of these
-states to search for nodes in the specified state which are
-not responding.  By default nodes in the specified state are
-reported whether they are responding or not.  Also note the
-\fB\-\-dead\fR and \fB\-\-responding\fR options for filtering
-nodes by state.
+and UNKNOWN.  By default nodes in the specified state are
+reported whether they are responding or not.  The \fB\-\-dead\fR 
+and \fB\-\-responding\fR options may be used to filtering nodes by 
+the responding flag.
 .TP
 \fB\-p <partition>\fR, \fB\-\-partition=<partition>\fR
 Print information only about the specified partition.  
