--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -6,6 +6,8 @@ documents those changes that are of interest to users and admins.
  -- Fix slurmctld handling of heterogeneous processor count on elan 
     switch (was setting DRAINED nodes in state DRAINING).
  -- Fix sinfo -R, --list-reasons to list all relevant node states.
+ -- Fix slurmctld to honor srun's node configuration specifications 
+    with FastSchedule==0 configuration.
 
 * Changes in SLURM 0.3.2
 ========================
