--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,7 +1,12 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.3.3 (not tagged yet)
+* Changes in SLURM 0.3.4
+========================
+ -- Allow srun to respond to ctrl-c and kill queued job while waiting
+    for allocation from controller.
+
+* Changes in SLURM 0.3.3 
 ========================
  -- Fix slurmctld handling of heterogeneous processor count on elan 
     switch (was setting DRAINED nodes in state DRAINING).
