--- a/trunk/doc/man/man3/slurm_job_step_create.3
+++ b/trunk/doc/man/man3/slurm_job_step_create.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "September 2003" "Morris Jette" "Slurm job step initiation functions"
+.TH "Slurm API" "3" "June 2004" "Morris Jette" "Slurm job step initiation functions"
 .SH "NAME"
 slurm_job_step_create \- Slurm job step initiation functions
 .SH "SYNTAX"
@@ -23,7 +23,7 @@ int \fBslurm_job_step_create\fR (
 .LP 
 .TP
 \fIslurm_step_alloc_req_msg_ptr\fP
-Specifies the pointer to the structure with job spep request specification. See 
+Specifies the pointer to the structure with job step request specification. See 
 slurm.h for full details on the data structure's contents.
 .TP
 \fIslurm_step_alloc_resp_msg_pptr\fP
