--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.4
 ========================
+ -- Fixes for reported problesm:
+   - slurm/404: Explicitly set pthread stack size to 1MB for srun
  -- Allow srun to respond to ctrl-c and kill queued job while waiting
     for allocation from controller.
 
