--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,9 +3,11 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.6
 ========================
+ -- Fixes for reported problems:
+   - slurm/459: Properly support partition's "Shared=force" configuration.
  -- Resync node state to DRAINED or DRAINING on restart in case job 
     and node state recovered are out of sync.
-
+ 
 * Changes in SLURM 0.3.5
 ========================
  -- Fix "SLURM_RLIMIT_* not found in environment" error message when
