--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -1,4 +1,4 @@
-.TH "slurm.conf" "5" "June 2004" "Morris Jette" "Slurm configuration file"
+.TH "slurm.conf" "5" "July 2004" "Morris Jette" "Slurm configuration file"
 .SH "NAME"
 slurm.conf \- Slurm configuration file 
 .SH "DESCRIPTION"
@@ -117,17 +117,20 @@ stopped by a debugger or considerable time could be required for batch
 job pre- and post-processing. The default value is unlimited (zero). 
 .TP
 \fBJobCompLoc\fR
-Define the location where job completion records are to be logged. 
 The interpretation of this value depends upon the logging mechanism 
 specified by the \fBJobCompType\fR parameter. 
 .TP
 \fBJobCompType\fR
 Define the job completion logging mechanism type.
-Acceptable values at present include "jobcomp/none" and "jobcomp/filetxt".
+Acceptable values at present include "jobcomp/none", "jobcomp/filetxt", 
+and "jobcomp/script".
 The default value is "jobcomp/none", which means that upon job completion 
 the record of the job is purged from the system. 
 The value "jobcomp/filetxt" indicates that a record of the job should be 
 written to a text file specified by the \fBJobCompLoc\fR parameter.
+The value "jobcomp/script" indicates that a script specified by the 
+\fBJobCompLoc\fR parameter is to be executed with environment variables 
+indicating the job information.
 .TP
 \fBJobCredentialPrivateKey\fR
 Fully qualified pathname of a file containing a private key used for 
