--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -12,6 +12,7 @@ documents those changes that are of interest to users and admins.
  -- Added new error code ESLURM_FRAGMENTED for immediate resource 
     allocation requests which are refused due to completing job (formerly 
     returned ESLURM_NOT_TOP_PRIORITY)
+ -- Modified job completion logging plugin calling sequence.
  
 * Changes in SLURM 0.3.5
 ========================
