--- a/trunk/doc/man/man3/slurm_reconfigure.3
+++ b/trunk/doc/man/man3/slurm_reconfigure.3
@@ -1,4 +1,4 @@
-.TH "Slurm API" "3" "February 2004" "Morris Jette" "Slurm administrative calls"
+.TH "Slurm API" "3" "July 2004" "Morris Jette" "Slurm administrative calls"
 .SH "NAME"
 slurm_delete_partition, slurm_init_part_desc_msg,
 slurm_reconfigure, slurm_shutdown, slurm_update_job, 
@@ -100,10 +100,18 @@ Note that the state of a node (e.g. DRAINING, IDLE, etc.) may be changed, but
 its hardware configuration may not be changed by this function. If the hardware 
 configuration of a node changes, update the Slurm configuration file and execute 
 the \fBslurm_reconfigure\fR function. This function may only be successfully 
-executed by user root. The node state flag \fBNODE_STATE_NO_RESPOND\fR may be 
-specified without changing the underlying node state. This might be used by some 
-external system monitoring tool to inform the Slurm controller that a node has 
-become unusable.
+executed by user root. If used by some autonomous program, the state value 
+most likely to be used is \fBNODE_STATE_DRAINING\fR. SLURM will automatically 
+determine if some program is active on the node and set its state to either 
+\fBNODE_STATE_DRAINING\fR or \fBNODE_STATE_DRAINED\fR as appropriate.
+The node state flag \fBNODE_STATE_NO_RESPOND\fR may be specified without 
+changing the underlying node state. Note that the node's 
+\fBNODE_STATE_NO_RESPOND\fR flag will be cleared as soon as the slurmd 
+daemon on that node communicates with the slurmctld daemon.
+Likewise the state \fBNODE_STATE_DOWN\fR indicates that the slurmd daemon 
+is not responding (and has not responded for an interval at least as long 
+as the \fBSlurmdTimeout\fR configuration parameter). The node will leave the 
+\fBNODE_STATE_DOWN\fR state as soon as  the slurmd daemon communicates.
 .LP 
 \fBslurm_update_partition\fR Request that the configuration of a partition be updated. 
 Note that most, but not all parameters of a partition may be changed by this 
