Add support for CheckpointType configuration parameter.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
  -- NOTE: "startclean" when transitioning from version 0.3, JOBS ARE LOST
  -- Added support for job account information (arbitrary string)
  -- Added support for job dependencies (start job X after job Y completes)
+ -- Added support for configuration parameter CheckpointType
 
 * Changes in SLURM 0.3.7
 ========================
