--- a/trunk/AUTHORS
+++ b/trunk/AUTHORS
@@ -2,6 +2,9 @@ Chris Dunlap <cdunlap@llnl.gov>
 Joey Ekstrom <ekstrom1@llnl.gov>
 Jim Garlick <garlick@llnl.gov>
 Mark Grondona <mgrondona@llnl.gov>
+Nathan Huff <nhuff@geekshanty.com>
 Morris Jette <jette1@llnl.gov>
+Jason King <king49@llnl.gov>
+Dan Phung <phung4@llnl.gov>
 Keven Tew <tew1@llnl.gov>
 Jay Windley <jwindley@lnxi.com>
