--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -8,7 +8,10 @@ documents those changes that are of interest to users and admins.
  -- Added support for job account information (arbitrary string)
  -- Added support for job dependencies (start job X after job Y completes)
  -- Added support for configuration parameter CheckpointType
- -- Added new job state "CANCELLED".
+ -- Added new job state "CANCELLED"
+ -- Don't strip binaries, breaks parallel debuggers
+ -- Fix bug in Munge authentication retry logic
+ -- Change srun handling of interupts to work properly with TotalView
 
 * Changes in SLURM 0.3.7
 ========================
